--- a/presselluke/index.html
+++ b/presselluke/index.html
@@ -53,7 +53,7 @@
                 <div class="image-container">
                     <img src="./assets/img.png" alt="Honey ritual for mental clarity">
                 </div>
-                <a href="https://lp.mielmemory.online/preclick" class="cta-button">Guarda il video adesso</a>
+                <a href="https://lp.ultimoteste.online/preclick" class="cta-button">Guarda il video adesso</a>
             </div>
         </div>
     </main>
@@ -74,6 +74,7 @@
         
         <p class="copyright">2025 All Rights Reserved</p>
     </footer>
-    <script type="text/javascript" src="https://lp.mielmemory.online/pretrack.js?rtkcmpid=693c6a56afa104440c145b3a"></script>
+    <script type="text/javascript" src="https://lp.ultimoteste.online/pretrack.js?rtkcmpid=693e0ec7c3ff86ba5fb800f9"></script>
 </body>
+
 </html>
